EXTRA_DIST=reveal.js/.gitignore				        \
	   reveal.js/.travis.yml			        \
	   reveal.js/README.md				        \
	   reveal.js/js/reveal.js			        \
	   reveal.js/js/reveal.min.js			        \
	   reveal.js/index.html				        \
	   reveal.js/LICENSE				        \
	   reveal.js/Gruntfile.js			        \
	   reveal.js/lib/js/classList.js		        \
	   reveal.js/lib/js/html5shiv.js		        \
	   reveal.js/lib/js/head.min.js			        \
	   reveal.js/lib/font/league_gothic_license	        \
	   reveal.js/lib/font/league_gothic-webfont.eot	        \
	   reveal.js/lib/font/league_gothic-webfont.ttf	        \
	   reveal.js/lib/font/league_gothic-webfont.svg	        \
	   reveal.js/lib/font/league_gothic-webfont.woff        \
	   reveal.js/lib/css/zenburn.css		        \
	   reveal.js/package.json			        \
	   reveal.js/plugin/notes-server/notes.html	        \
	   reveal.js/plugin/notes-server/client.js	        \
	   reveal.js/plugin/notes-server/index.js	        \
	   reveal.js/plugin/notes/notes.html		        \
	   reveal.js/plugin/notes/notes.js		        \
	   reveal.js/plugin/multiplex/master.js		        \
	   reveal.js/plugin/multiplex/client.js		        \
	   reveal.js/plugin/multiplex/index.js		        \
	   reveal.js/plugin/markdown/example.md		        \
	   reveal.js/plugin/markdown/marked.js		        \
	   reveal.js/plugin/markdown/example.html	        \
	   reveal.js/plugin/markdown/markdown.js	        \
	   reveal.js/plugin/leap/leap.js		        \
	   reveal.js/plugin/remotes/remotes.js		        \
	   reveal.js/plugin/postmessage/postmessage.js	        \
	   reveal.js/plugin/postmessage/example.html	        \
	   reveal.js/plugin/print-pdf/print-pdf.js	        \
	   reveal.js/plugin/math/math.js		        \
	   reveal.js/plugin/highlight/highlight.js	        \
	   reveal.js/plugin/search/search.js		        \
	   reveal.js/plugin/zoom-js/zoom.js		        \
	   reveal.js/test/examples/embedded-media.html	        \
	   reveal.js/test/examples/assets/image2.png	        \
	   reveal.js/test/examples/assets/image1.png	        \
	   reveal.js/test/examples/math.html		        \
	   reveal.js/test/examples/barebones.html	        \
	   reveal.js/test/examples/slide-backgrounds.html       \
	   reveal.js/test/qunit-1.12.0.css		        \
	   reveal.js/test/test-markdown.html		        \
	   reveal.js/test/test-markdown.js		        \
	   reveal.js/test/test.html			        \
	   reveal.js/test/test-markdown-element-attributes.js   \
	   reveal.js/test/test-markdown-slide-attributes.js     \
	   reveal.js/test/test-markdown-element-attributes.html \
	   reveal.js/test/qunit-1.12.0.js		        \
	   reveal.js/test/test.js			        \
	   reveal.js/test/test-markdown-slide-attributes.html   \
	   reveal.js/css/reveal.min.css			        \
	   reveal.js/css/print/paper.css		        \
	   reveal.js/css/print/pdf.css			        \
	   reveal.js/css/reveal.css			        \
	   reveal.js/css/theme/night.css		        \
	   reveal.js/css/theme/README.md		        \
	   reveal.js/css/theme/blood.css		        \
	   reveal.js/css/theme/template/theme.scss	        \
	   reveal.js/css/theme/template/mixins.scss	        \
	   reveal.js/css/theme/template/settings.scss	        \
	   reveal.js/css/theme/simple.css		        \
	   reveal.js/css/theme/solarized.css		        \
	   reveal.js/css/theme/serif.css		        \
	   reveal.js/css/theme/beige.css		        \
	   reveal.js/css/theme/sky.css			        \
	   reveal.js/css/theme/moon.css			        \
	   reveal.js/css/theme/source/serif.scss	        \
	   reveal.js/css/theme/source/solarized.scss	        \
	   reveal.js/css/theme/source/moon.scss		        \
	   reveal.js/css/theme/source/simple.scss	        \
	   reveal.js/css/theme/source/default.scss	        \
	   reveal.js/css/theme/source/sky.scss		        \
	   reveal.js/css/theme/source/blood.scss	        \
	   reveal.js/css/theme/source/night.scss	        \
	   reveal.js/css/theme/source/beige.scss	        \
	   reveal.js/css/theme/default.css