EXTRA_DIST=CMakeLists.txt                            \
	   Bibliographie.bib			     \
	   Images/mfront-umat.hxx                    \
	   Images/mfront-umat.tex                    \
	   Images/mfront-umat2.tex                   \
	   Images/tubeaxi.eps			     \
	   Images/2norton-rk.mfront		     \
	   Images/mfront.eps			     \
	   Images/mfrontexcel.eps		     \
	   Images/sirius8.eps			     \
	   Images/2norton-rk.mfront.tex		     \
	   Images/tubeaxi2.eps			     \
	   Images/NortonRK.eps			     \
	   Images/Methode_Newton.pstricks	     \
	   Images/2norton-rk.tex		     \
	   Images/Algo_temps.eps		     \
	   Images/CompSeq.eps			     \
	   annexe-orthotropie.tex		     \
	   style.ist				     \
	   Champs.tex				     \
	   Makefile.doc				     \
	   mfront/nbzrSwellingModel.cxx		     \
	   mfront/SIC_SpecificHeat_AUDUBERT.cxx	     \
	   mfront/SICCreepBehaviour-ple.tex	     \
	   mfront/MaterialLaw.tex		     \
	   mfront/test-T.tex			     \
	   mfront/GetEvol.ps			     \
	   mfront/sic.cxx			     \
	   mfront/ImplicitOrthotropicCreep.mfront    \
	   mfront/loimat.tex			     \
	   mfront/SICCreepBehaviour.mfront	     \
	   mfront/vba.tex			     \
	   mfront/SICCreepBehaviour.cxx		     \
	   mfront/UPuC_SolidSwellingModel.tex	     \
	   mfront/loimat.vb			     \
	   mfront/SIC_Density.mfront		     \
	   mfront/GetEvol.tex			     \
	   mfront/SIC_YoungModulus_SNEAD.cxx	     \
	   mfront/nbzrSwellingModel.mfront	     \
	   mfront/sic.tex			     \
	   mfront/test-T.ple			     \
	   mfront/SIC_ThermalExpansion_Snead.tex     \
	   mfront/sicSwelling.tex		     \
	   mfront/SIC_ThermalConductivity_Snead.mfront \
	   mfront/SIC_SpecificHeat_AUDUBERT.tex	     \
	   mfront/OrthotropicElastic.tex	     \
	   mfront/SIC_YoungModulus_SNEAD.mfront	     \
	   mfront/SIC_ThermalExpansion_Snead.mfront  \
	   mfront/GetEvol.dgibi			     \
	   mfront/SICCreepBehaviour.ple		     \
	   mfront/OrthotropicCreep.tex		     \
	   mfront/sicSwelling.cxx		     \
	   mfront/nbzrSwellingModel.tex		     \
	   mfront/SIC_ThermalConductivity_Snead.tex  \
	   mfront/MaterialLaw.mfront		     \
	   mfront/SICCreepBehaviour-ple.cxx	     \
	   mfront/OrthotropicCreep.mfront	     \
	   mfront/ImplicitOrthotropicCreep.tex	     \
	   mfront/SICCreepBehaviour.tex		     \
	   mfront/hillTensor.tex		     \
	   mfront/test-T.cxx			     \
	   mfront/SICCreepBehaviour-gibi2.tex	     \
	   mfront/TestGetEvol.tex		     \
	   mfront/SIC_YoungModulus_SNEAD.tex	     \
	   mfront/SIC_Density.cxx		     \
	   mfront/SIC_Density.tex		     \
	   mfront/UPuC_SolidSwellingModel.mfront     \
	   mfront/GetEvol.eps			     \
	   mfront/SICCreepBehaviour.dgibi	     \
	   mfront/sic.mfront			     \
	   mfront/SIC_ThermalExpansion_Snead.cxx     \
	   mfront/SIC_SpecificHeat_AUDUBERT.mfront   \
	   mfront/SIC_ThermalConductivity_Snead.cxx  \
	   mfront/SICCreepBehaviour-gibi.tex	     \
	   mfront/sicSwelling.mfront		     \
	   mfront/OrthotropicElastic.mfront	     \
	   mfront/loimat.vba			     \
	   mfront/hillTensor.cxx		     \
	   mfront/highlight.sty
